# orinayo-pico

./: CMakeLists.txt  Dockerfile  Hiroyuki_OYAMA_license.md  README.md  audio_output.c  audio_output.h  ble_midi_controller.c  ble_midi_controller.h  bt_link_key_store.c  bt_link_key_store.h  btstack_config.h  button.c  button.h  ghost_note.c  looper.c  looper.h  m5audio-old.c  m5audio.c  m5audio.h  main.c  main.h  midi.h  midi_host.h  note_scheduler.c  pico_bluetooth.c  pico_bluetooth.h  storage.c  storage.h  tap_tempo.c  tap_tempo.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
.github/workflows/: build-fallback.yml  build.yml
ble_midi_lib/: ble_midi_client.c  ble_midi_client.h  ble_midi_pkt_codec.c  ble_midi_pkt_codec.h  ring_buffer_lib_config.h
ble_midi_lib/ring_buffer_lib/: ring_buffer_lib.c  ring_buffer_lib.h
bluepad32/: CMakeLists.txt
bluepad32/bt/: uni_bt.c  uni_bt_le.c  uni_bt_setup.c
bluepad32/parser/: uni_hid_parser_keyboard.c  uni_hid_parser_stadia.c  uni_hid_parser_xboxone.c
docs/: BLE_API.md  BLE_CONFIGURATION.md  USB_AUDIO_OUTPUT.md  build_errors.txt  endless_encoders.c  orinayo.pptx
examples/: CMakeLists.txt  README.md  ble_client_example.c
pico-w-ble-midi-lib/: ble_midi_client.c  ble_midi_client.h  ble_midi_pkt_codec.h
pico_pio_usb/src/: pio_usb.c  pio_usb_configuration.h
ring_buffer_lib/: ring_buffer_lib_config.h
tinyusb/hw/bsp/rp2040/: family.c
tinyusb/src/: CMakeLists.txt
tools/: RC600-1.txt  RC600-2.txt  ample2orinayo.html  ketron2rc600-1.cmd  ketron2rc600-2.cmd  ketron2sp404-1.cmd  ketron2sp404-2.cmd  ketron2sp404-3.cmd
wiki/: 1-orinayo-overview.md  10-reference.md  10.1-midi-implementation-chart.md  10.2-configuration-reference.md  10.3-troubleshooting.md  11-glossary.md  2-getting-started.md  2.1-hardware-requirements.md  2.2-building-and-flashing.md  2.3-configuration.md  3-architecture.md  3.1-system-components.md  3.2-data-flow-pipeline.md  3.3-hardware-interfaces.md  4-bluetooth-input-system.md  4.1-ble-device-management.md  4.2-hid-to-midi-translation.md  4.3-chord-generation-system.md  4.4-operational-modes.md  4.5-specialized-midi-devices.md  5-musical-processing.md  5.1-main-application-loop.md  5.2-step-sequencer.md  5.3-clock-synchronization.md  5.4-ghost-note-generation.md  5.5-note-scheduler.md  5.6-tap-tempo.md  6-midi-output-system.md  6.1-dual-output-architecture.md  6.2-usb-midi-configuration.md  6.3-synthesizer-control.md  7-user-interface.md  7.1-button-input.md  7.2-status-display.md  8-infrastructure.md  8.1-asynchronous-timer.md  8.2-pattern-storage.md  8.3-synchronization-primitives.md  9-build-system.md  9.1-cmake-configuration.md  (+3 more)
